[package]
name = "ccp_nimbus"
version = "0.3.0"
authors = ["Prateesh Goyal <prateesh@mit.edu>"]
edition = "2018"

[dependencies]
anyhow = "1"
num-complex="0.2"
portus = { git = "https://github.com/ccp-project/portus", branch = "run-multiple-rebased" }
rand="0.5"
rustfft="3"
slog = "2"
slog-async = "2"
slog-term = "2"
structopt = "0.2"
time="0.1"
